update chart page

--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -4,3 +4,8 @@
 @import 'tailwindcss/utilities';
 
 /* Custom styles can be added below */
+.v-btn,
+.btn,
+button {
+  outline: none !important;
+}
