--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -9,3 +9,51 @@
 button {
   outline: none !important;
 }
+
+/* Custom Tour - shepherd */
+.custom-tour{
+  width: fit-content !important;
+  padding: 4px 12px 18px 12px !important;
+  max-width: 280px !important;
+  font-size: 14px !important;
+}
+
+
+
+.custom-tour .shepherd-title{
+ padding: 0px 8px !important;
+ font-weight: 500 !important;
+}
+
+.custom-tour .shepherd-header{
+  padding: 4px 0px 0px 0px !important;
+  background-color: transparent !important;
+}
+
+.custom-tour .shepherd-text{
+  padding: 18px 8px !important;
+}
+
+.custom-tour .shepherd-footer{
+  padding: 0px !important;
+}
+
+.shepherd-element {
+  opacity: 0;
+  transform: translateY(8px);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+.shepherd-element.shepherd-open {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.shepherd-modal-overlay-container {
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+.shepherd-modal-overlay-container.shepherd-open {
+  opacity: 0.5;
+}
